fix modal visible

--- a/wp-content/themes/templatex1/style.css
+++ b/wp-content/themes/templatex1/style.css
@@ -230,6 +230,11 @@ body {
     padding-top: 174px;
 }
 
+.modal-review .otzyv,
+.modal-review .otzyvText {
+    width: auto;
+}
+
 @media screen and (max-width: 768px) {
     h1 {
         font-family: 'Raleway';
@@ -1580,10 +1585,9 @@ iframe {
     top: 50%;
     left: 50%;
     display: none;
-    width: 100%;
+    width: calc(100% - 40px);
     max-width: 1075px;
     max-height: 772px;
-    margin: 0 20px;
     transform: translate(-50%, -50%);
     background: #F0F0F3;
 }
